--- a/KernelModeSTL/KernelModeSTL.vcxproj
+++ b/KernelModeSTL/KernelModeSTL.vcxproj
@@ -161,11 +161,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="hashtable.cpp" />
+    <ClCompile Include="hash_map.cpp" />
     <ClCompile Include="include\global.cpp" />
     <ClCompile Include="include\initsect.cpp" />
     <ClCompile Include="list.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="map.cpp" />
+    <ClCompile Include="pair.cpp" />
     <ClCompile Include="string.cpp" />
     <ClCompile Include="vector.cpp" />
   </ItemGroup>
@@ -173,10 +175,12 @@
     <ClInclude Include="algorithm.hpp" />
     <ClInclude Include="example.hpp" />
     <ClInclude Include="hashtable.hpp" />
+    <ClInclude Include="hash_map.hpp" />
     <ClInclude Include="include\global.hpp" />
     <ClInclude Include="include\sect_attribs.h" />
     <ClInclude Include="list.hpp" />
     <ClInclude Include="map.hpp" />
+    <ClInclude Include="pair.hpp" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="string.hpp" />
     <ClInclude Include="vector.hpp" />
